--- a/Async prog/Asyncprog.ui
+++ b/Async prog/Asyncprog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>575</width>
+    <width>483</width>
     <height>464</height>
    </rect>
   </property>
@@ -33,7 +33,7 @@
         </property>
        </spacer>
       </item>
-      <item row="3" column="1">
+      <item row="5" column="1">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -49,19 +49,6 @@
         </property>
        </spacer>
       </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="startButton">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>Start</string>
-        </property>
-       </widget>
-      </item>
       <item row="2" column="0">
        <spacer name="horizontalSpacer">
         <property name="orientation">
@@ -74,6 +61,26 @@
          </size>
         </property>
        </spacer>
+      </item>
+      <item row="3" column="1">
+       <widget class="QPushButton" name="debugButton">
+        <property name="text">
+         <string>debugButton</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="startButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Start</string>
+        </property>
+       </widget>
       </item>
       <item row="2" column="2">
        <spacer name="horizontalSpacer_2">
@@ -88,6 +95,13 @@
         </property>
        </spacer>
       </item>
+      <item row="4" column="1">
+       <widget class="QPushButton" name="debugButton2">
+        <property name="text">
+         <string>debugButton2</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
     <item>
@@ -97,6 +111,11 @@
         <horstretch>0</horstretch>
         <verstretch>40</verstretch>
        </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
       </property>
       <property name="text">
        <string/>
@@ -110,7 +129,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>575</width>
+     <width>483</width>
      <height>25</height>
     </rect>
    </property>
